tests/positive/basic/lastindex_countocc/input.ci
void main(string[] args) {
    print(toString(lastIndexOf("abcabc", "abc")) + "\n");
    print(toString(countOccurrences("aaaa", "aa")) + "\n");
}
