tests/negative/runtime/arrayget_large_index/input.ci
void main() {
    int[] xs = [1];
    print(toString(arrayGet(xs, 99)) + "\n");
}
